--- a/styles/pages/media-index.css
+++ b/styles/pages/media-index.css
@@ -1,22 +1,5 @@
 /* MEDIA HEADER */
-@media (max-width: 770px) {
-  .private-header-left-section span {
-    display: none;
-  }
-
-  .private-header-middle-section {
-    font-size: 1.875em;
-  }
-
-  .header-search-container {
-    top: 64px;
-  }
-
-  .private-header-right-section span {
-    display: none;
-  }
-}
-
+/* Media search container */
 @media (max-width: 950px) {
   .search-container {
     width: 540px;
@@ -33,6 +16,51 @@
 
   .categories-item img {
     width: 100%;
+  }
+}
+
+@media (max-width: 770px) {
+  .private-header-left-section span {
+    display: none;
+  }
+
+  .private-header-middle-section {
+    font-size: 1.875em;
+  }
+
+  .search-navbar {
+    top: 64px;
+  }
+
+  .private-header-right-section span {
+    display: none;
+  }
+
+  .cart-bridge {
+    top: 63px;
+  }
+
+  .cart-bridge-arrow {
+    top: 38px;
+    width: 60px;
+  }
+
+  .cart-navbar {
+    width: 300px;
+    height: 360px;
+    top: 64px;
+  }
+
+  .cart-content {
+    padding: 20px 40px;
+  }
+
+  .cart-price {
+    display: none;
+  }
+
+  .cart-checkout span {
+    display: inline-block;
   }
 }
 
