--- a/styles/pages/product-detail.css
+++ b/styles/pages/product-detail.css
@@ -61,14 +61,21 @@ img {
   background-color: var(--primary-color);
 }
 
-.summary-color div:nth-child(2) {
+.summary-color-item {
+  display: grid;
+  grid-template-columns: 56px 56px 56px 56px 56px;
+  column-gap: 16px;
+  row-gap: 16px;
+}
+
+.summary-color-item div {
   width: 56px;
   height: 56px;
   position: relative;
 }
 
 .detail-image-left div:hover:after,
-.summary-color div:nth-child(2):hover:after,
+.summary-color-item div:hover:after,
 .product-size div:hover:after {
   content: "";
   position: absolute;
@@ -147,7 +154,9 @@ img {
 }
 
 .product-size {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  row-gap: 10px;
 }
 
 .product-size div {
@@ -158,7 +167,6 @@ img {
   line-height: 50px;
   font-size: 13px;
   text-align: center;
-  margin: 0 10px 15px 0px;
   position: relative;
 }
 
