--- a/styles/pages/product-detail.css
+++ b/styles/pages/product-detail.css
@@ -206,13 +206,13 @@ img {
   margin-bottom: 15px;
 }
 
-.reference-title p {
+.reference-title pre {
   font-weight: 400;
   padding-top: 10px;
   display: none;
 }
 
-.reference-title:hover p {
+.reference-title:hover pre {
   display: block;
 }
 
