--- a/public/home/styles/pages/product-detail.css
+++ b/public/home/styles/pages/product-detail.css
@@ -8,13 +8,13 @@ main {
 }
 
 .private-header {
-  background-color: var(--light-bg-color);
-  color: var(--primary-color);
+  background-color: var(--light-bg-color) !important;
+  color: var(--primary-color) !important;
 }
 
 .cart-navbar,
 .search-navbar {
-  background-color: var(--secondary-bg-color);
+  background-color: var(--secondary-bg-color) !important;
 }
 
 .main-product-detail img {
