--- a/public/home/styles/pages/cart.css
+++ b/public/home/styles/pages/cart.css
@@ -1,16 +1,15 @@
 body {
-    margin-top: 64px !important;
+    margin-top: 68px !important;
     height: auto !important;
 }
 
 .private-header {
-    background-color: var(--light-bg-color);
-    color: var(--primary-color);
+    color: var(--primary-color) !important;
 }
 
 .cart-navbar,
 .search-navbar {
-    background-color: var(--secondary-bg-color);
+    background-color: var(--secondary-bg-color) !important;
 }
 
 .container {
