--- a/public/home/styles/pages/index.css
+++ b/public/home/styles/pages/index.css
@@ -9,13 +9,12 @@ header {
   top: 0;
   left: 0;
   right: 0;
-
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
   padding: 1.02em 2em;
   font-size: var(--font-small);
-  z-index: 2;
+  z-index: 999;
 }
 
 .private-header:hover,
@@ -56,14 +55,14 @@ header {
 /* Search container */
 .search-navbar {
   position: fixed;
-  top: 83px;
+  top: 89px;
   left: 0;
   right: 0;
   padding: 0px 0px 40px 0px;
   background-color: var(--light-bg-color);
   color: var(--primary-color);
   display: none;
-  z-index: 2;
+  z-index: 10;
 }
 
 .search-navbar.scrolled {
@@ -87,11 +86,17 @@ header {
   width: 100%;
   height: 40px;
   border-width: 0 0 1px 0;
-  outline: none;
   background-color: transparent;
   font-size: 1.5em;
   padding: 6px 36px;
 }
+
+.search-input input:focus,
+.search-input input:active {
+  box-shadow: none !important;
+}
+
+
 
 .search-icon {
   position: absolute;
@@ -151,9 +156,6 @@ header {
   font-weight: 600;
 }
 
-.categories-name a {
-  text-decoration: underline;
-}
 
 /* Cart container */
 .ri-shopping-bag-line {
@@ -180,10 +182,9 @@ header {
   top: 83px;
   width: 328px;
   height: 450px;
-
   background-color: var(--light-bg-color);
   color: var(--primary-color);
-  z-index: 999;
+  z-index: 1000;
   font-size: 0.875em;
   box-shadow: 0 3px 8px var(--secondary-light-color);
   display: none;
