done product detail and add to cart

--- a/public/home/styles/shared/general.css
+++ b/public/home/styles/shared/general.css
@@ -28,7 +28,7 @@ body {
   font-size: 100%;
   letter-spacing: 2px;
   color: var(--primary-color);
-  background-color: var(--bg-color);
+  background-color: var(--bg-color) !important;
 }
 
 pre {
